@@ -1,5 +1,7 @@
-from six.moves.queue import Queue
 import heapq
+
+from six.moves.queue import Queue
+
 
 class PriorityQueue(Queue):
     """A Queue subclass that uses `heapq` to maintain a priority queue"""
@@ -12,3 +14,22 @@ class PriorityQueue(Queue):
 
     def _get(self):
         return heapq.heappop(self.queue)
+
+
+class UniqueQueue(Queue):
+    """A Queue subclass that uses a set to prevent duplicate inserts"""
+    def _init(self, maxsize):
+        Queue._init(self, maxsize)
+        self._seen = set()
+
+    def _put(self, item):
+        if item in self._seen:
+            return
+
+        Queue._put(self, item)
+        self._seen.add(item)
+
+    def _get(self):
+        item = Queue._get(self)
+        self._seen.remove(item)
+        return item
