@@ -4,10 +4,11 @@
 # LICENSE file in the root directory of this source tree. An additional grant
 # of patent rights can be found in the PATENTS file in the same directory.
 #
-from sparts.collections import PriorityQueue
+from sparts.collections import PriorityQueue, UniqueQueue
 from sparts.tests.base import BaseSpartsTestCase
 
-class PriotityQueueTests(BaseSpartsTestCase):
+
+class PriorityQueueTests(BaseSpartsTestCase):
     def test_basic_functionality(self):
         # Make a priority queue
         queue = PriorityQueue()
@@ -16,6 +17,7 @@ class PriotityQueueTests(BaseSpartsTestCase):
         self.assertTrue(queue.empty())
 
         # Put a bunch of stuff in it.
+        queue.put(0)
         queue.put(3.14159)
         queue.put(3)
         queue.put(1)
@@ -29,10 +31,37 @@ class PriotityQueueTests(BaseSpartsTestCase):
         # Remove stuff in sorted order
         self.assertEquals(queue.get(), -21)
         self.assertEquals(queue.get(), 0)
+        self.assertEquals(queue.get(), 0)
         self.assertEquals(queue.get(), 1)
         self.assertEquals(queue.get(), 3)
         self.assertEquals(queue.get(), 3.14159)
         self.assertEquals(queue.get(), 6)
+
+        # It should be empty again
+        self.assertTrue(queue.empty())
+
+
+class UniqueQueueTests(BaseSpartsTestCase):
+    def test_basic_functionality(self):
+        # Make a priority queue
+        queue = UniqueQueue()
+
+        # It should be empty
+        self.assertTrue(queue.empty())
+
+        # Put some stuff in it.
+        queue.put(2)
+        queue.put(0)
+        queue.put(2)
+        queue.put(1)
+
+        # Not empty any more
+        self.assertFalse(queue.empty())
+
+        # Remove stuff
+        self.assertEquals(queue.get(), 2)
+        self.assertEquals(queue.get(), 0)
+        self.assertEquals(queue.get(), 1)
 
         # It should be empty again
         self.assertTrue(queue.empty())
